added cross SecurityConfig.java